--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" defer></script>
 </head>
 
 <body>
@@ -69,7 +69,8 @@
 					</svg>
 					<div class="header__phone">
 						<a class="header__phone--link" href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a>
-						<a class="header__phone--link" href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a>
+						<a class="header__phone--link" href="tel:+375(44)748-73-22">+375 (44) 748-73-22</a>
+						<a class="header__phone--link" href="mailto:akvator2011@mail.ru">akvator2011@mail.ru</a>
 					</div>
 				</div>
 			</div>
@@ -80,7 +81,7 @@
 				<div class="main__imageconteiner">
 					<div class="main__imageconteiner--text ">
 						<h1 class=" main__imageconteiner--text-title">
-							Более 10 лет на рынке
+							БОЛЕЕ 10 ЛЕТ НА РЫНКЕ
 						</h1>
 						<p class="main__imageconteiner--text-text">Эффективное отопление частного дома — задача, для решения
 							которой
@@ -168,7 +169,7 @@
 						</div>
 					</div>
 					<div>
-						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-10</h1>
+						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-30</h1>
 						<div class="products__wrapper">
 							<div class="products__image">
 								<img class="products__image--img" src="images/kotel.png" alt="изображение котла" loading="lazy">
@@ -195,7 +196,7 @@
 						</div>
 					</div>
 					<div>
-						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-10</h1>
+						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-50</h1>
 						<div class="products__wrapper">
 							<div class="products__image">
 								<img class="products__image--img" src="images/kotel.png" alt="изображение котла" loading="lazy">
@@ -222,7 +223,7 @@
 						</div>
 					</div>
 					<div>
-						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-10</h1>
+						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-75</h1>
 						<div class="products__wrapper">
 							<div class="products__image">
 								<img class="products__image--img" src="images/kotel.png" alt="изображение котла" loading="lazy">
@@ -249,7 +250,7 @@
 						</div>
 					</div>
 					<div>
-						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-10</h1>
+						<h1 class="products__title" id="ancor1">Твердотопливный котел с водяным контуром АОТВ-95</h1>
 						<div class="products__wrapper">
 							<div class="products__image">
 								<img class="products__image--img" src="images/kotel.png" alt="изображение котла" loading="lazy">
@@ -327,7 +328,7 @@
 
 		</main>
 
-		<footer class="footer">
+		<footer class="footer lazy" id="bg-image">
 			<div class="footer__container">
 				<div class="footer__menu">
 					<ul class="footer__menu-list">
@@ -346,23 +347,24 @@
 					</ul>
 				</div>
 				<div class="footer__phone">
+					<a href="mailto:akvator2011@mail.ru">akvator2011@mail.ru</a><br>
+					<a href="tel:+375(29)289-87-60">+375 (44) 748-73-22</a><br>
 					<a href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a><br>
-					<a href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a><br>
-					<a class="footer__viber" href="https://viber.click/375292898760" target="_blank"
+					<a class="footer__viber" href="https://viber.click/375447487322" target="_blank"
 						rel="noopener noreferrer"><img class="footer__viber" src="images/viber.png" alt="Вайбер"></a>
 				</div>
 				<div class="footer__maps">
-					<h3 class="footer__maps-title">Мы находимся</h3>
+					<p class="footer__maps-title">Мы находимся</p>
 					<iframe title="Карта проезда"
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2362.3847567753733!2d23.800012615508926!3d53.693589856345916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e078942ce2a7e3%3A0x60ae18d5cbe485f1!2z0YPQuy4g0JHQvtC70LTQuNC90LAgOCwg0JPRgNC-0LTQvdC-IDIzMDAwNQ!5e0!3m2!1sru!2sby!4v1640616308095!5m2!1sru!2sby"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1985.553258475868!2d23.79725638285374!3d53.714092591360014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e078ce88f6cee9%3A0xbba157dfdb1419dd!2z0L_RgNC-0LXQt9C0INCf0YDQvtC80YvRgdC70L7QstGL0LkgNiwg0JPRgNC-0LTQvdCw!5e0!3m2!1sru!2sby!4v1641741595458!5m2!1sru!2sby"
 						width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
-
-			</div>
+				<a href="#" class="inox_cristal_rd">^</a>
 		</footer>
+
 	</div>
 
-	<script src="index.js"></script>
+
 
 </body>
 
