--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/mediaqueries.css">
 	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="css/mediaqueries.css">
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" defer></script>
 </head>
 <!-- --------------разобраться с гапом во всех местах -->
@@ -355,7 +352,7 @@
 
 				<article class="products__article">
 					<h1 class="products__article-title"> Котлы с водяным контуром </h1>
-					<p class="products__article-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;При выборе отопительной
+					<p class="products__article-text">При выборе отопительной
 						системы для обогрева частного дома или производства стоит обратить внимание на котлы с водяным
 						контуром отопления. В отличие от обычных котлов модели
 						такого типа оснащены внутренним теплообменником, где происходит нагрев теплоносителя, который
@@ -366,7 +363,7 @@
 					</p>
 					<h1 class="products__article-title">Особенности котлов с водяным контуром</h1>
 					<p class="products__article-text">
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Модели с водяным контуром способны переносить тепло в
+						Модели с водяным контуром способны переносить тепло в
 						разные
 						комнаты, находящиеся на значительном отдалении от котельной. Внутри котла с водяным контуром, помимо
 						топки, где происходит сгорание топлива (брикет, дрова, уголь), имеется также герметичная камера в виде
@@ -379,7 +376,7 @@
 					</p>
 					<h1 class="products__article-title">Преимущества котлов с водяным контуром</h1>
 					<p class="products__article-text">
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;При выборе отопительного агрегата такого типа лучше всего
+						При выборе отопительного агрегата такого типа лучше всего
 						отдавать предпочтение котлам длительного
 						горения с водяным контуром, где реализована технология медленного сгорания топлива (тление). Это не
 						только упрощает процесс эксплуатации агрегата, но и качественным образом увеличивает КПД, снижая при
@@ -404,16 +401,16 @@
 				<div class="footer__menu">
 					<ul class="footer__menu-list">
 						<li class="footer__menu-item">
-							<a href="about/about.html">О нас</a>
+							<a class="footer__menu-link" href="about/about.html">О нас</a>
 						</li>
 						<li class="footer__menu-item">
-							<a href="installation/installation.html">Монтаж</a>
+							<a class="footer__menu-link" href="installation/installation.html">Монтаж</a>
 						</li>
 						<li class="footer__menu-item">
-							<a href="payment/payment.html">Оплата и доставка</a>
+							<a class="footer__menu-link" href="payment/payment.html">Оплата и доставка</a>
 						</li>
 						<li class="footer__menu-item">
-							<a href="contacts/contacts.html">Контакты</a>
+							<a class="footer__menu-link" href="contacts/contacts.html">Контакты</a>
 						</li>
 					</ul>
 				</div>
@@ -422,13 +419,15 @@
 					<a href="tel:+375(29)289-87-60">+375 (44) 748-73-22</a><br>
 					<a href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a><br>
 					<a class="footer__viber" href="https://viber.click/375447487322" target="_blank"
-						rel="noopener noreferrer"><img class="footer__viber" src="images/viber.png" alt="Вайбер"></a>
+						rel="noopener noreferrer">
+						<img class="footer__viber" src="images/viber.png" alt="Вайбер">
+					</a>
 				</div>
 				<div class="footer__maps">
 					<p class="footer__maps-title">Мы находимся</p>
-					<iframe title="Карта проезда"
+					<iframe id="footer" title="Карта проезда"
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1985.553258475868!2d23.79725638285374!3d53.714092591360014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e078ce88f6cee9%3A0xbba157dfdb1419dd!2z0L_RgNC-0LXQt9C0INCf0YDQvtC80YvRgdC70L7QstGL0LkgNiwg0JPRgNC-0LTQvdCw!5e0!3m2!1sru!2sby!4v1641741595458!5m2!1sru!2sby"
-						width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+						width="300" height="200" style="border:0;" loading="lazy"></iframe>
 				</div>
 				<a href="#" class="footer__btn-up">^</a>
 		</footer>
