contacts page added

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -1,15 +1,250 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-Cyrl-BY">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Контакты</title>
+	<link rel="stylesheet" href="contacts.css">
 </head>
 
 <body>
-	<h1>Contacts</h1>
+	<main class="contacts">
+		<div class="contacts__header">
+			<h1 class="contacts__header--title">Наши контактные данные </h1>
+		</div>
+
+		<div class="contacts__content">
+			<div class="contacts__content--adress">
+				<div class="contacts__iconwrap">
+					<svg enable-background="new 0 0 128 128" id="Слой_1" version="1.1" viewBox="0 0 128 128"
+						xml:space="preserve" width="80" height="80">
+						<g>
+							<g>
+								<path
+									d="M96.4,124H31.6c-5.3,0-9-5.3-7.1-10.2L34,87.9c1.1-3,3.9-5,7.1-5h45.7c3.2,0,6,2,7.1,5l9.6,25.9    C105.4,118.7,101.7,124,96.4,124z"
+									fill="#9DD9DF" />
+							</g>
+							<g>
+								<path
+									d="M40,117.2c-0.2,0-0.4-0.1-0.6-0.2l-7.1-4c-0.6-0.3-0.8-1.1-0.5-1.7c0.3-0.6,1.1-0.8,1.7-0.5l7.1,4    c0.6,0.3,0.8,1.1,0.5,1.7C40.9,117,40.5,117.2,40,117.2z"
+									fill="#F1F7F2" />
+							</g>
+							<g>
+								<path
+									d="M33,117.2c-0.4,0-0.9-0.2-1.1-0.6c-0.3-0.6-0.1-1.4,0.5-1.7l7.1-4c0.6-0.3,1.4-0.1,1.7,0.5    c0.3,0.6,0.1,1.4-0.5,1.7l-7.1,4C33.4,117.2,33.2,117.2,33,117.2z"
+									fill="#F1F7F2" />
+							</g>
+							<g>
+								<path
+									d="M96.4,125.2H31.6c-2.9,0-5.6-1.4-7.3-3.8c-1.7-2.4-2-5.4-1-8.1l9.6-25.9c1.3-3.5,4.6-5.8,8.3-5.8h45.7    c3.7,0,7,2.3,8.3,5.8l9.6,25.9c1,2.7,0.6,5.8-1,8.1C102,123.8,99.3,125.2,96.4,125.2z M41.2,84.2c-2.6,0-5,1.7-6,4.1l-9.6,25.9    c-0.7,2-0.5,4.1,0.7,5.8s3.1,2.7,5.2,2.7h64.8c2.1,0,4-1,5.2-2.7s1.5-3.9,0.7-5.8l-9.6-25.9c-0.9-2.5-3.3-4.1-6-4.1H41.2z"
+									fill="#62345B" />
+							</g>
+							<g>
+								<path
+									d="M65.1,112.1C65.1,112.1,65.1,112.1,65.1,112.1c-0.4,0-0.7,0-1.1,0c-0.7,0-1.2-0.6-1.2-1.3    c0-0.7,0.6-1.2,1.3-1.2c0.3,0,0.6,0,0.9,0c0.7,0,1.2,0.6,1.2,1.3C66.3,111.6,65.8,112.1,65.1,112.1z M69,111.7    c-0.6,0-1.1-0.4-1.2-0.9c-0.2-0.7,0.2-1.4,0.9-1.5c0.3-0.1,0.6-0.2,0.8-0.3c0.6-0.2,1.4,0.1,1.6,0.7c0.2,0.6-0.1,1.4-0.7,1.6    c-0.3,0.1-0.7,0.2-1.1,0.3C69.3,111.7,69.2,111.7,69,111.7z M60.1,111.7c-0.1,0-0.1,0-0.2,0c-0.3-0.1-0.7-0.1-1-0.2    c-0.7-0.1-1.1-0.8-1-1.4c0.1-0.7,0.8-1.1,1.4-1c0.3,0.1,0.6,0.1,1,0.2c0.7,0.1,1.2,0.7,1,1.4C61.3,111.2,60.7,111.7,60.1,111.7z     M44.3,110.9c-0.5,0-1-0.3-1.2-0.9c-0.2-0.7,0.1-1.4,0.8-1.6c0.3-0.1,0.7-0.2,1.1-0.3c0.7-0.2,1.3,0.3,1.5,0.9    c0.2,0.7-0.3,1.3-0.9,1.5c-0.3,0.1-0.6,0.2-0.9,0.2C44.5,110.9,44.4,110.9,44.3,110.9z M55.2,110.8c-0.1,0-0.1,0-0.2,0    c-0.3-0.1-0.6-0.1-1-0.2c-0.7-0.1-1.2-0.7-1.1-1.4c0.1-0.7,0.7-1.2,1.4-1.1c0.3,0,0.7,0.1,1,0.2c0.7,0.1,1.1,0.8,1,1.4    C56.3,110.4,55.8,110.8,55.2,110.8z M50.2,110.3C50.2,110.3,50.2,110.3,50.2,110.3c-0.4,0-0.7,0-1,0c-0.7,0-1.2-0.6-1.2-1.3    c0-0.7,0.6-1.2,1.2-1.2c0,0,0,0,0,0c0.3,0,0.7,0,1.1,0c0.7,0,1.2,0.6,1.2,1.3C51.4,109.7,50.9,110.3,50.2,110.3z M73.3,109.2    c-0.3,0-0.6-0.1-0.9-0.4c-0.5-0.5-0.5-1.3,0-1.8c0.2-0.2,0.4-0.4,0.6-0.6c0.4-0.5,1.2-0.6,1.8-0.2s0.6,1.2,0.2,1.8    c-0.2,0.3-0.5,0.6-0.8,0.8C74,109.1,73.7,109.2,73.3,109.2z"
+									fill="#F1F7F2" />
+							</g>
+							<g>
+								<path
+									d="M74,104L74,104c-1,0-1.9-0.8-1.9-1.9V41c0-1,0.8-1.9,1.9-1.9l0,0c1,0,1.9,0.8,1.9,1.9v61.1    C75.9,103.2,75,104,74,104z"
+									fill="#F5F1E3" />
+							</g>
+							<g>
+								<path
+									d="M74,105.2c-1.7,0-3.1-1.4-3.1-3.1V41c0-1.7,1.4-3.1,3.1-3.1s3.1,1.4,3.1,3.1v61.1    C77.1,103.9,75.7,105.2,74,105.2z M74,40.4c-0.3,0-0.6,0.3-0.6,0.6v61.1c0,0.3,0.3,0.6,0.6,0.6s0.6-0.3,0.6-0.6V41    C74.6,40.7,74.3,40.4,74,40.4z"
+									fill="#62345B" />
+							</g>
+							<g>
+								<circle cx="74" cy="31.8" fill="#EE7F8F" r="27.8" />
+							</g>
+							<g opacity="0.8">
+								<path
+									d="M55.5,33.8c-1.1,0-2-0.9-2-2c0-11.3,9.2-20.5,20.5-20.5c1.1,0,2,0.9,2,2s-0.9,2-2,2    c-9.1,0-16.5,7.4-16.5,16.5C57.5,32.9,56.6,33.8,55.5,33.8z"
+									fill="#F1F7F2" />
+							</g>
+							<g opacity="0.2">
+								<path
+									d="M74,4c-1.6,0-3.1,0.1-4.6,0.4C82.5,6.6,92.5,18,92.5,31.8S82.5,57,69.4,59.2c1.5,0.3,3.1,0.4,4.6,0.4    c15.3,0,27.8-12.4,27.8-27.8S89.3,4,74,4z"
+									fill="#62345B" />
+							</g>
+							<g>
+								<path
+									d="M74,60.8c-16,0-29-13-29-29s13-29,29-29s29,13,29,29S90,60.8,74,60.8z M74,5.2    c-14.6,0-26.5,11.9-26.5,26.5S59.4,58.3,74,58.3c14.6,0,26.5-11.9,26.5-26.5S88.6,5.2,74,5.2z"
+									fill="#62345B" />
+							</g>
+						</g>
+					</svg>
+					<p class="contacts__icon--title">Адрес</p>
+				</div>
+				<p>Республика Беларусь,<br> Гродненская область,<br>
+					г. Гродно, пр-д Промысловый 6</p>
+				<p>УНП 591277657 ИП Косенко Ю. Д.<br>Свидетельство о регистрации<br>
+					№ 591277657 от 00.00.0000 года</p>
+			</div>
+			<div class="contacts__content--phones">
+
+				<div class="contacts__iconwrap">
+					<svg id="Icons" viewBox="0 0 48 48" width="80" height="80">
+						<defs>
+							<style>
+								.cls-1 {
+									fill: #ff6242;
+								}
+
+								.cls-2 {
+									fill: #45413c;
+									opacity: 0.15;
+								}
+
+								.cls-3 {
+									fill: none;
+								}
+
+								.cls-3,
+								.cls-5,
+								.cls-6,
+								.cls-7,
+								.cls-8 {
+									stroke: #45413c;
+									stroke-linejoin: round;
+								}
+
+								.cls-3,
+								.cls-5,
+								.cls-6,
+								.cls-7 {
+									stroke-linecap: round;
+								}
+
+								.cls-4 {
+									fill: #ff866e;
+								}
+
+								.cls-5 {
+									fill: #e04122;
+								}
+
+								.cls-6 {
+									fill: #8ca4b8;
+								}
+
+								.cls-7 {
+									fill: #fff5e3;
+								}
+
+								.cls-8 {
+									fill: #fff;
+								}
+							</style>
+						</defs>
+						<path id="_Path_" data-name="&lt;Path&gt;" class="cls-1"
+							d="M44.14,25.11a7.55,7.55,0,0,0-1.69-8.2A12.61,12.61,0,0,0,37.74,14a53.7,53.7,0,0,0-8.67-2.18,54.48,54.48,0,0,0-8.9-.92A12.85,12.85,0,0,0,14.74,12a7.56,7.56,0,0,0-4.39,7.13A1.21,1.21,0,0,0,12,20.25l4.23-1.51A1.39,1.39,0,0,0,17,17l-.37-1a.93.93,0,0,1,.86-1.25,60.3,60.3,0,0,1,10.9.76,60.49,60.49,0,0,1,10.51,3,.93.93,0,0,1,.38,1.47l-.7.84a1.38,1.38,0,0,0,.18,1.95l3.45,2.86A1.21,1.21,0,0,0,44.14,25.11Z" />
+						<ellipse id="_Ellipse_" data-name="&lt;Ellipse&gt;" class="cls-2" cx="27.52" cy="45.5" rx="14.5"
+							ry="1.5" />
+						<path id="_Rectangle_" data-name="&lt;Rectangle&gt;" class="cls-1"
+							d="M13.37,35.66h28a0,0,0,0,1,0,0v6.07a.93.93,0,0,1-.93.93H14.3a.93.93,0,0,1-.93-.93V35.66A0,0,0,0,1,13.37,35.66Z" />
+						<path id="_Rectangle_2" data-name="&lt;Rectangle&gt;" class="cls-3"
+							d="M13.37,35.66h28a0,0,0,0,1,0,0v6.07a.93.93,0,0,1-.93.93H14.3a.93.93,0,0,1-.93-.93V35.66A0,0,0,0,1,13.37,35.66Z" />
+						<path id="_Path_2" data-name="&lt;Path&gt;" class="cls-1"
+							d="M41.37,35.66h-28l4-12.42a.93.93,0,0,1,.89-.64H36.49a.93.93,0,0,1,.89.64Z" />
+						<path id="_Path_3" data-name="&lt;Path&gt;" class="cls-4"
+							d="M16.73,26.33H38a1.16,1.16,0,0,1,.38.06l-1-3.15a.93.93,0,0,0-.89-.64H18.25a.93.93,0,0,0-.89.64l-1,3.15A1.21,1.21,0,0,1,16.73,26.33Z" />
+						<path id="_Path_4" data-name="&lt;Path&gt;" class="cls-3"
+							d="M41.37,35.66h-28l4-12.42a.93.93,0,0,1,.89-.64H36.49a.93.93,0,0,1,.89.64Z" />
+						<rect id="_Rectangle_3" data-name="&lt;Rectangle&gt;" class="cls-5" x="18.97" y="20.26" width="4.2"
+							height="2.33" />
+						<rect id="_Rectangle_4" data-name="&lt;Rectangle&gt;" class="cls-5" x="31.57" y="20.26" width="4.2"
+							height="2.33" />
+						<path id="_Path_5" data-name="&lt;Path&gt;" class="cls-4"
+							d="M14.44,13.78a12.92,12.92,0,0,1,5.44-1.17,54.48,54.48,0,0,1,8.9.92,54,54,0,0,1,8.67,2.18,12.69,12.69,0,0,1,4.71,2.95,7.53,7.53,0,0,1,2.23,5.72,7.54,7.54,0,0,0-1.94-7.47A12.61,12.61,0,0,0,37.74,14a53.7,53.7,0,0,0-8.67-2.18,54.48,54.48,0,0,0-8.9-.92A12.85,12.85,0,0,0,14.74,12a7.53,7.53,0,0,0-4.38,6.49A7.53,7.53,0,0,1,14.44,13.78Z" />
+						<path id="_Path_6" data-name="&lt;Path&gt;" class="cls-3"
+							d="M44.14,25.11a7.55,7.55,0,0,0-1.69-8.2A12.61,12.61,0,0,0,37.74,14a53.7,53.7,0,0,0-8.67-2.18,54.48,54.48,0,0,0-8.9-.92A12.85,12.85,0,0,0,14.74,12a7.56,7.56,0,0,0-4.39,7.13A1.21,1.21,0,0,0,12,20.25l4.23-1.51A1.39,1.39,0,0,0,17,17l-.37-1a.93.93,0,0,1,.86-1.25,60.3,60.3,0,0,1,10.9.76,60.49,60.49,0,0,1,10.51,3,.93.93,0,0,1,.38,1.47l-.7.84a1.38,1.38,0,0,0,.18,1.95l3.45,2.86A1.21,1.21,0,0,0,44.14,25.11Z" />
+						<path id="_Rectangle_5" data-name="&lt;Rectangle&gt;" class="cls-6"
+							d="M14.3,42.67H40.44a0,0,0,0,1,0,0v1.4a.93.93,0,0,1-.93.93H15.23a.93.93,0,0,1-.93-.93v-1.4A0,0,0,0,1,14.3,42.67Z" />
+						<path id="_Path_7" data-name="&lt;Path&gt;" class="cls-7"
+							d="M23.17,32.86a.94.94,0,0,1-.93.94H19a.94.94,0,0,1,0-1.87h3.27A.93.93,0,0,1,23.17,32.86Z" />
+						<path id="_Path_8" data-name="&lt;Path&gt;" class="cls-7"
+							d="M36.71,32.86a.94.94,0,0,1-.94.94H32.51a.94.94,0,1,1,0-1.87h3.26A.94.94,0,0,1,36.71,32.86Z" />
+						<path id="_Path_9" data-name="&lt;Path&gt;" class="cls-7"
+							d="M23.17,29.13a.93.93,0,0,1-.93.93H19.9a.93.93,0,0,1,0-1.86h2.34A.93.93,0,0,1,23.17,29.13Z" />
+						<path id="_Path_10" data-name="&lt;Path&gt;" class="cls-7"
+							d="M35.77,29.13a.93.93,0,0,1-.93.93H32.51a.93.93,0,1,1,0-1.86h2.33A.93.93,0,0,1,35.77,29.13Z" />
+						<path id="_Path_11" data-name="&lt;Path&gt;" class="cls-7"
+							d="M23.64,25.4a.94.94,0,0,1-.94.93H20.84a.94.94,0,1,1,0-1.87H22.7A.94.94,0,0,1,23.64,25.4Z" />
+						<path id="_Path_12" data-name="&lt;Path&gt;" class="cls-7"
+							d="M29.24,25.4a.94.94,0,0,1-.94.93H26.44a.94.94,0,1,1,0-1.87H28.3A.94.94,0,0,1,29.24,25.4Z" />
+						<path id="_Path_13" data-name="&lt;Path&gt;" class="cls-8"
+							d="M13.35,2.55a.32.32,0,0,1,.3,0,.33.33,0,0,1,.16.25l.41,4.45a.35.35,0,0,1-.22.35.34.34,0,0,1-.39-.13L11.18,3.81a.35.35,0,0,1,0-.28.32.32,0,0,1,.2-.21Z" />
+						<path id="_Path_14" data-name="&lt;Path&gt;" class="cls-8"
+							d="M21.12,2.49a.31.31,0,0,1,.22.2.3.3,0,0,1,0,.29L19,6.78a.34.34,0,0,1-.62-.2l.3-4.4a.38.38,0,0,1,.14-.26.36.36,0,0,1,.29,0Z" />
+						<path id="_Path_15" data-name="&lt;Path&gt;" class="cls-8"
+							d="M5.76,7.45a.37.37,0,0,0-.1.28A.35.35,0,0,0,5.83,8l3.88,2.21a.35.35,0,0,0,.41-.06.33.33,0,0,0,0-.41L7.8,6a.33.33,0,0,0-.24-.15.33.33,0,0,0-.27.09Z" />
+						<path id="_Path_16" data-name="&lt;Path&gt;" class="cls-8"
+							d="M2.5,14.5a.35.35,0,0,0,.1.29.32.32,0,0,0,.28.09l4.43-.59A.34.34,0,0,0,7.6,14a.35.35,0,0,0-.22-.35L3.25,12.11a.33.33,0,0,0-.29,0,.31.31,0,0,0-.16.24Z" />
+						<path id="_Path_17" data-name="&lt;Path&gt;" class="cls-7"
+							d="M34.84,25.4a.93.93,0,0,1-.93.93H32a.94.94,0,1,1,0-1.87h1.87A.94.94,0,0,1,34.84,25.4Z" />
+						<path id="_Path_18" data-name="&lt;Path&gt;" class="cls-7"
+							d="M29.7,29.13a.92.92,0,0,1-.93.93H26a.93.93,0,0,1,0-1.86h2.8A.92.92,0,0,1,29.7,29.13Z" />
+						<path id="_Path_19" data-name="&lt;Path&gt;" class="cls-7"
+							d="M29.7,32.86a.93.93,0,0,1-.93.94H26a.94.94,0,0,1,0-1.87h2.8A.93.93,0,0,1,29.7,32.86Z" />
+					</svg>
+					<p class="contacts__icon--title">Телефоны</p>
+				</div>
+				<p><a class="" href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a> - МТС</p>
+				<p><a class="" href="tel:+375(44)748-73-22">+375 (44) 748-73-22</a> - Velcom</p>
+				<p><a class="" href="tel:+375(44)748-73-22">+375 (44) 748-73-22</a> - Viber</p>
+				<p><a class="" href="mailto:akvator2011@mail.ru">akvator2011@mail.ru</a>- Email</p>
+			</div>
+			<div class="contacts__content--time">
+				<svg version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 80 80" style="enable-background:new 0 0 80 80;"
+					xml:space="preserve" width="80" height="80">
+					<g>
+						<g>
+							<path style="fill:#F78F8F;"
+								d="M40,77.5C19.322,77.5,2.5,60.678,2.5,40S19.322,2.5,40,2.5S77.5,19.322,77.5,40    S60.678,77.5,40,77.5z M40,9.5C23.183,9.5,9.5,23.183,9.5,40S23.183,70.5,40,70.5S70.5,56.817,70.5,40S56.817,9.5,40,9.5z" />
+						</g>
+						<g>
+							<path style="fill:#C74343;"
+								d="M40,3c20.402,0,37,16.598,37,37S60.402,77,40,77S3,60.402,3,40S19.598,3,40,3 M40,71    c17.093,0,31-13.907,31-31S57.093,9,40,9S9,22.907,9,40S22.907,71,40,71 M40,2C19.013,2,2,19.013,2,40s17.013,38,38,38    s38-17.013,38-38S60.987,2,40,2L40,2z M40,70c-16.569,0-30-13.432-30-30c0-16.569,13.431-30,30-30s30,13.431,30,30    C70,56.568,56.569,70,40,70L40,70z" />
+						</g>
+					</g>
+					<path style="fill:#FFFFFF;"
+						d="M3.374,30c0.974-3.573,2.451-6.929,4.359-10h9.951C23.177,13.876,31.126,10,40,10  c16.569,0,30,13.431,30,30c0,16.568-13.431,30-30,30S10,56.568,10,40c0-3.512,0.635-6.868,1.744-10H3.374z" />
+					<polyline style="fill:none;stroke:#66798F;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;"
+						points="53.989,19.33 40,40   51.692,51.692 " />
+					<g>
+						<circle style="fill:#66798F;" cx="40" cy="40" r="3" />
+					</g>
+					<g>
+						<circle style="fill:#C5D4DE;" cx="40" cy="13" r="1" />
+					</g>
+					<g>
+						<circle style="fill:#C5D4DE;" cx="40" cy="67" r="1" />
+					</g>
+					<g>
+						<circle style="fill:#C5D4DE;" cx="13" cy="40" r="1" />
+					</g>
+					<g>
+						<circle style="fill:#C5D4DE;" cx="67" cy="40" r="1" />
+					</g>
+					<g>
+						<polygon style="fill:#F78F8F;" points="7.5,25.5 7.5,8.207 24.793,25.5  " />
+						<g>
+							<path style="fill:#C74343;" d="M8,9.414L23.586,25H8V9.414 M7,7v19h19L7,7L7,7z" />
+						</g>
+					</g>
+					<path style="fill:none;stroke:#F78F8F;stroke-width:6;stroke-miterlimit:10;"
+						d="M19.009,13.252  c-1.927,1.514-3.686,3.232-5.245,5.121" />
+				</svg>
+				<p class="contacts__icon--title">Время работы</p>
+				<p>пн – пт с 9 00 до 21 00<br>
+					сб – вс с 9 00 до 20 00</p>
+			</div>
+		</div>
+		<a class="btn__back" onclick="javascript:history.back(); return false;">Вернуться на главную </a>
+	</main>
 </body>
 
 </html>
