--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<rect fill="none" height="24" width="24" />
 						<path d="M19,15l-1.41-1.41L13,18.17V2H11v16.17l-4.59-4.59L5,15l7,7L19,15z" />
 					</svg>
-					<h1 class="separate__div--title">Выбрать твердотопливный котел в Гродно</h1>
+					<h1 class="separate__div--title">Купить твердотопливный котел в Гродно</h1>
 					<svg enable-background="new 0 0 24 24" height="36px" viewBox="0 0 24 24" width="36px" fill="#FFFFFF">
 						<rect fill="none" height="24" width="24" />
 						<path d="M19,15l-1.41-1.41L13,18.17V2H11v16.17l-4.59-4.59L5,15l7,7L19,15z" />
@@ -416,7 +416,7 @@
 				</div>
 				<div class="footer__phone">
 					<a href="mailto:akvator2011@mail.ru">akvator2011@mail.ru</a><br>
-					<a href="tel:+375(29)289-87-60">+375 (44) 748-73-22</a><br>
+					<a href="tel:+375(44)748-73-22">+375 (44) 748-73-22</a><br>
 					<a href="tel:+375(29)289-87-60">+375 (29) 289-87-60</a><br>
 					<a class="footer__viber" href="https://viber.click/375447487322" target="_blank"
 						rel="noopener noreferrer">
