--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</nav>
 				</div>
 				<div class="header__phone--box">
-					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#f7e99f">
 						<path d="M0 0h24v24H0V0z" fill="none" />
 						<path
 							d="M6.54 5c.06.89.21 1.76.45 2.59l-1.2 1.2c-.41-1.2-.67-2.47-.76-3.79h1.51m9.86 12.02c.85.24 1.72.39 2.6.45v1.49c-1.32-.09-2.59-.35-3.8-.75l1.2-1.19M7.5 3H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.49c0-.55-.45-1-1-1-1.24 0-2.45-.2-3.57-.57-.1-.04-.21-.05-.31-.05-.26 0-.51.1-.71.29l-2.2 2.2c-2.83-1.45-5.15-3.76-6.59-6.59l2.2-2.2c.28-.28.36-.67.25-1.02C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1z" />
@@ -97,12 +97,12 @@
 					</div>
 				</div>
 				<div class="separate__div">
-					<svg enable-background="new 0 0 24 24" height="36px" viewBox="0 0 24 24" width="36px" fill="#FFFFFF">
+					<svg enable-background="new 0 0 24 24" height="36px" viewBox="0 0 24 24" width="36px" fill="#f7e99f">
 						<rect fill="none" height="24" width="24" />
 						<path d="M19,15l-1.41-1.41L13,18.17V2H11v16.17l-4.59-4.59L5,15l7,7L19,15z" />
 					</svg>
 					<h1 class="separate__div--title">Купить твердотопливный котел в Гродно</h1>
-					<svg enable-background="new 0 0 24 24" height="36px" viewBox="0 0 24 24" width="36px" fill="#FFFFFF">
+					<svg enable-background="new 0 0 24 24" height="36px" viewBox="0 0 24 24" width="36px" fill="#f7e99f">
 						<rect fill="none" height="24" width="24" />
 						<path d="M19,15l-1.41-1.41L13,18.17V2H11v16.17l-4.59-4.59L5,15l7,7L19,15z" />
 					</svg>
